--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,12 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+#Airflow
+airflow-webserver.pid
+airflow.cfg
+airflow.db
+logs/
+standalone_admin_password.txt
+webserver_config.py
